src/test/deca/context/invalid/resultats/test7_op_comp4-cont.res
./src/test/deca/context/invalid/test7_op_comp4.deca:18:1: Cannot compare string types.
